feat(condenser): GCHeapSummaryPairCombiner for Before/After GC summary pairs
Implement GCHeapSummaryPairCombiner that combines the two Before/After events
per GC cycle into a single combined event for GCHeapSummary, G1HeapSummary,
MetaspaceSummary, and PSHeapSummary (all fire exactly 2× per GC with a 'when'
field). Inflate reconstructs the original 2 events losslessly.

At 4,961 GC cycles (gc-log benchmark): reduces 29,766 events → 14,883 combined
(2× per type). Estimated ~74 KB uncompressed header savings; compressed impact
smaller but cumulative with other GC_LOG optimizations.

Configuration flag: combineGCHeapSummaryPairs — enabled in LOSSLESS (and
therefore DEFAULT, REDUCED, GC_LOG).

Also:
- gc-log.jfc: add explanatory comments to disabled events (ObjectCountAfterGC,
  GCPhasePauseLevel4, PromoteObjectOutsidePLAB, ObjectAllocationOutsideTLAB,
  ObjectAllocationSample, ZStatisticsSampler, NativeMethodSample)
- docs/production-recording.md: add ZGC director gap row to comparison table